# arm-vm

./: README.md
docs/: devices.md  fdt.md
vmm/: Cargo.toml  deploy.sh
vmm/src/: main.rs
vmm/src/vmm/: event_manager.rs  fdt.rs  memory.rs  mod.rs
vmm/src/vmm/cpu/: mod.rs  regs.rs
vmm/src/vmm/device/: bus.rs  descriptor.rs  i8042.rs  mod.rs  queue.rs
vmm/src/vmm/device/block/: mod.rs
vmm/src/vmm/device/net/: mod.rs
vmm/src/vmm/device/serial/: mod.rs  out.rs  trigger.rs  wrapper.rs
vmm/src/vmm/gicv/: mod.rs
vmm/src/vmm/gicv/regs/: dist_regs.rs  icc_regs.rs  mod.rs
vmm/src/vmm/mmio/: mmio_manager.rs  mmio_transport.rs  mod.rs
