[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

[dependencies]
event-manager = { version = "0.4.0", features = ["remote_endpoint"] }
kvm-bindings = "0.6.0"
kvm-ioctls = "0.15.0"
libc = "0.2.151"
linux-loader = { version = "0.10.0", features = ["elf"] }
memfd = "0.6.4"
versionize = "0.2.0"
versionize_derive = "0.1.6"
vm-allocator = "0.1.0"
vm-device = "0.1.0"
vm-fdt = "0.3.0"
vm-memory = { version = "0.13.1", features = ["backend-mmap", "backend-bitmap"] }
vm-superio = "0.7.0"
vmm-sys-util = "0.11.2"
